10/19/10 add polarity property to battery
10/18/10 add E-field detector to model, using Property<T> notification
10/18/10 add stubs to BatteryCapacitorCircuit for determining E-field at a Point3D
10/13/10 properly initialize "Show Values" in field detector
10/12/10 add vector values to field detector, wire up to controls
10/12/10 add wire that connects field detector probe to meter
10/12/10 put components of field detector directly on the canvas, so that their locations can be adjusted independently as the canvas size changes
10/12/10 provide PNode interface to meters control panel, specific type of meter doesn't need to be known
10/12/10 enable voltmeter check box for development
10/12/10 decided not to update bar meters only when they are visible, not worth it (insignificant performance gain, significant code complication)
10/12/10 will not be using phetcommon's ModelViewTransform2D because it doesn't handle 3D needed for this sim
10/12/10 revised ModelViewTransform to handle deltas in 2D-view and 3D-model coordinate frames
10/12/10 removed unused code from ModelViewTransform
10/12/10 migrate GridPanel to phetcommon, deprecate EasyGridBagLayout
10/12/10 add support for relative anchors to GridPanel, doc where to add Java 1.6 baseline anchors
10/12/10 migrate FadeOutActivity to piccolo-phet
10/12/10 decided to keep unused IPlateChargeGridSizeStrategies for historical purposes, noted in javadoc
10/12/10 decided not to factor out duplicate code in drag handles, doing so would obfuscate
10/12/10 tweak drag handle nodes to use less space
10/12/10 clean up drag handlers, doc and clearer variable names
10/11/10 refine how IntroductionModule subclasses DieletricModule 
10/11/10 specify explicit default values for ranges in CLConstants
10/7/10 enable Electric Field Detector check box (again) for feature development
# 0.00.32 (44871) Oct 7, 2010
10/7/10 development version to share with KSU